--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Welcome to wrapper.rb.
+wrapper.rb
+----------
 
 This Ruby module provides a generalized wrapper script for other commands.
 It uses a yaml configuration file to describe pre- and post- commands
@@ -42,13 +43,13 @@ All the other files are provided as examples:
     being wrapped and 'testwrap.yaml' as its configuration file.  
   - 'gitwrap' wraps a git assumed to be installed at /usr/bin/git; it uses
     'gitwrap.yaml' as its configuration file.  
-  - Our convention is to put the yaml files in a hidden directory under 
-    ${HOME}:  'testwrap.yaml' goes in ~/.testwrap; 'gitwrap.yaml' goes in 
-    ~/.gitwrap.  You don't need to follow this convention, but be sure to 
-    change the WRAP_YAML variable in the appropriate wrapper script
-    ('testwrap' or 'gitwrap') to reflect its location.  
-  - All the executables ('testwrap', 'testout', 'gitwrap') should be copied 
-    to your PATH.
+  - Our convention is to hide the yaml files under ${HOME}:  'testwrap.yaml' 
+    becomes ~/.testwrap.yaml; 'gitwrap.yaml' goes becomes ~/.gitwrap.yaml.
+    You don't need to follow this convention, but be sure to change the 
+    WRAP_YAML variable in the appropriate wrapper script ('testwrap' or 
+    'gitwrap') to reflect its location.  
+  - All the executables ('testwrap', 'testout', 'gitwrap',
+    'git_media_setup_exaample') should be copied to your PATH.
   - 'gitwrap' may need to be renamed as 'git' if you want to use it with 
     a GUI client like SourceTree.  This is because SourceTree lets you
     specify which git executable you want to use, but it doesn't let you
